@@ -389,6 +389,7 @@ Settings.movie.renamer.$M=Movieset title (sort title)
 Settings.movie.renamer.$N=Movieset title
 Settings.movie.renamer.$I=IMDB number
 Settings.movie.renamer.$C=Certification
+Settings.movie.renamer.$G=First genre
 Settings.movie.renamer.$L=Language
 Settings.movie.renamer.$R=Video resolution
 Settings.movie.renamer.$A=audio code + channels
